@@ -32,9 +32,11 @@
   ~ URL: http://www.morganclaypool.com/doi/abs/10.2200/S00468ED1V01Y201301ICR025
   ~
   ~ Copyright statement:
-  ~ --------------------
+  ~ ====================
   ~ (c) 2002-2013 by Mathias Lux (mathias@juggle.at)
-  ~     http://www.semanticmetadata.net/lire, http://www.lire-project.net
+  ~  http://www.semanticmetadata.net/lire, http://www.lire-project.net
+  ~
+  ~ Updated: 19.04.13 21:16
   -->
 
 <project name="LireSampleApp" default="compile" basedir=".">
